--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.18.1",
+    "bufferutil": "^4.0.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.33",
     "postcss": "^8",
