--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,24 @@
+// {
+//   "extends": ["next/core-web-vitals", "next/typescript"]
+// }
+
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "root": true,
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "ignorePatterns": [
+    "node_modules/",
+    ".next/",
+    "lib/generated/**"   // ignore les fichiers générés par Prisma
+  ],
+  "rules": {
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/no-unused-expressions": "warn",
+    "@typescript-eslint/no-require-imports": "warn"
+  }
 }
+
